--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <button type="button" id="rock">Rock</button>
+    <button type="button" id="paper">Paper</button>
+    <button type="button" id="scissors">Scissors</button>
+    <div class="resultArea">
+        <p>Player Score: <span class="playerScoreArea"></span></p>
+        <p>Computer Score: <span class="computerScoreArea"></span></p>
+        <p class="gameResult"></p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
